# JobAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  shopaikey_chat.py  shopaikey_embeddings.py
backend/app/agent/: __init__.py  active_cv_context.py  approval.py  checkpoint.py  context.py  graph.py  lifecycle.py  prompt.py  runner.py  state.py
backend/app/api/: __init__.py  attachments.py  chat.py  cvs.py  dependencies.py  health.py  jobs.py  observability.py  profile.py  sse.py
backend/app/core/: __init__.py  ids.py  settings.py  time.py
backend/app/data/: skills_seed.yaml
backend/app/db/: __init__.py  base.py  enums.py  seed.py  session.py
backend/app/graph/: __init__.py  candidate_sync.py  client.py  consistency.py  constraints.py  delete_cv.py  delete_job.py  driver.py  errors.py  job_sync.py  lifecycle.py  observability.py  observability_cv.py  rebuild.py  rebuild_jobs.py  rebuild_ops.py  rebuild_snapshot.py  rebuild_target.py  rebuild_verify.py  retrieval.py  schema.py  selected_skill_projection.py  sync_candidate.py  sync_cv.py  sync_job.py  sync_shared.py
backend/app/repositories/: __init__.py  agent_runs.py  attachment_text_chunks.py  attachments.py  chat_messages.py  conversations.py  cv_documents.py  graph_outbox.py  job_deletion.py  job_evaluations.py  job_posts.py  jobs.py  observability.py  preferences.py  profile_drafts.py  profiles.py  saved_jobs.py  tool_executions.py
backend/app/schemas/: __init__.py  attachments.py  candidate.py  chat.py  common.py  cv_document.py  cv_manager.py  embeddings.py  health.py  job_evaluations.py  job_post.py  job_tools.py  jobs.py  matching.py  matching_card.py  matching_result.py  observability.py  preferences.py  profile.py  profile_draft.py  score_breakdown.py  skills.py  sse.py  tools.py
backend/app/security/: __init__.py  url_policy.py
backend/app/services/: __init__.py  active_cv_reader.py  attachment_resolve.py  attachment_storage.py  attachment_storage_containment.py  attachment_storage_errors.py  attachment_storage_fd.py  attachment_storage_ops.py  attachment_storage_paths.py  attachment_storage_publish.py  attachment_storage_unlink.py  attachment_storage_windows.py  chat_context.py  (+62 more)
backend/evaluation/: __init__.py  benchmark_embeddings.py  benchmark_pdf_extraction.py  dataset_contracts.py  dataset_models.py  dataset_privacy.py  embedding_benchmark_schema.py  extraction_scoring.py  metrics.py  metrics_classification.py  metrics_ranking.py  pdf_benchmark_schema.py  ranking_features.py  ranking_report.py  ranking_scoring.py  ranking_sealed.py  ranking_tune.py  ranking_types.py  run_extraction.py  run_ranking.py  run_tool_selection.py  split_assignment.py  split_lock.py  split_protocol.py  split_readers.py  tool_run_parse.py  tool_selection_scoring.py
backend/migrations/: README  env.py  script.py.mako
backend/scripts/: check_shopaikey_compatibility.py
backend/tests/: conftest.py  test_config.py  test_embedding_benchmark.py  test_lifecycle.py  test_pdf_extraction_benchmark.py  test_shopaikey_diagnostic_foundation.py  test_shopaikey_function_call_and_tool_round_trip.py  test_shopaikey_model_and_completion.py  test_shopaikey_streaming_and_exit.py  test_shopaikey_structured_schema.py
(+507 files in other folders)
