[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent-backend"
version = "0.0.0"
description = "JobAgent Phase 0 backend feasibility package"
requires-python = ">=3.11"
dependencies = [
    "pypdf==6.14.2",
    "httpx==0.28.1",
    "pydantic==2.12.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
