[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent-backend"
version = "0.1.0"
description = "JobAgent Phase 1 backend application package"
requires-python = ">=3.11"
dependencies = [
    # Phase 0 proven pins (preserved)
    "pypdf==6.14.2",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    # Plan 5 / Master Phase 4: public HTML main-text extraction (Phase 0 approved pin)
    "trafilatura==2.1.0",
    # Phase 1 / Plan 2 runtime (Phase 0 intended versions)
    "pydantic-settings==2.14.2",
    "fastapi==0.139.0",
    # FastAPI multipart UploadFile (Plan 4 CV upload); exact installed pin.
    "python-multipart==0.0.30",
    "uvicorn==0.51.0",
    "sqlalchemy==2.0.51",
    "aiosqlite==0.22.1",
    "alembic==1.18.5",
    "neo4j==6.2.0",
    # Phase 2 / Plan 3 runtime (Phase 0 intended versions + SQLite checkpointer pin)
    "langgraph==1.2.9",
    "langchain-core==1.4.9",
    "langchain-openai==1.3.5",
    # Compatibility-checked against langgraph 1.2.9 (requires langgraph-checkpoint>=4.1.0,<5)
    "langgraph-checkpoint-sqlite==3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.21",
    "mypy==1.18.2",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
